Changing markup for a grid/flexbox design

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>This is a test page</title>
+<title>Grid/Flexbox Example</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Hello World</h1>
+
+<div class="container">
+  <header>Header</header>
+  <aside>Menu</aside>
+  <main>Content</main>
+  <footer>Footer</footer>
+</div>
+
 </body>
 </html>
