Added header items

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <body>
 
 <div class="container">
-  <header>Header</header>
+  <header>
+    <div>Home</div>
+    <div>Some Other Link</div>
+    <div>Login</div>
+  </header>
   <aside>Menu</aside>
   <main>Content</main>
   <footer>Footer</footer>
